[package]
name = "clawos-stress"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }
clawos-core = { path = "../../clawos-core" }
observability = { path = "../../observability" }

[[bench]]
name = "stress"
harness = false
